--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
-    "firebase-admin": "^13.0.1"
+    "firebase-admin": "^13.0.1",
+    "socket.io": "^4.8.1"
   }
 }
